--- a/mutimedia.html
+++ b/mutimedia.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="favicon16.png">
     <title>Multimédia</title>
 </head>
+
 <body>
     <h1>Audio local</h1> 
     <audio src="audio/passaro.mp3" controls autoplay></audio>   
